--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="apply">Apply</string>
     <string name="share_app">Share App</string>
     <string name="vibration">Vibration</string>
-    <string name="rateapp">Rate Us</string>
+    <string name="rateapp">Оцените Нас</string>
     <string name="bg_music">Background Music</string>
     <string name="share_via">Share via</string>
     <string name="next_play">Play Next Level</string>
